--- a/views/admin_dc_statblock_partial.erb
+++ b/views/admin_dc_statblock_partial.erb
@@ -38,6 +38,6 @@
 <div style="width:80%; margin:10px auto 0px auto;">
   <div class="input-group iconpicker-container">
     <input data-placement="bottomRight" class="form-control icp iconpicker-element iconpicker-input" <% if !@dc.stats.nil? && @dc.stats.size > 0 %>value="<%=@dc.stats[blocknum-1][:icon]%>"<% end %> type="text" name="block<%=blocknum%>_icon" placeholder="Icon">
-    <span class="input-group-addon"><i class="fa <%=@dc.stats[blocknum-1][:icon]%>"></i></span>
+    <span class="input-group-addon"><% if !@dc.stats.nil? && @dc.stats.size > 0 %><i class="fa <%=@dc.stats[blocknum-1][:icon]%>"></i><% end %></span>
   </div>
 </div>
