Update ExportFormats to store template code in database instead of files - needed for Heroku since files outside of slug cannot be persisted

--- a/views/admin_ef_single.erb
+++ b/views/admin_ef_single.erb
@@ -60,7 +60,7 @@
       <div class="form-group">
         <div class="col-sm-1"></div>
         <div class="col-sm-9">
-          <textarea name="efTemplateCode" class="form-control codeEditorTA" rows="20" wrap="off"><%=@fileContents%></textarea>
+          <textarea name="efTemplateCode" class="form-control codeEditorTA" rows="20" wrap="off"><%=@efERB%></textarea>
         </div>
         <div class="col-sm-1" style="text-align:left; margin-left:-20px; padding-top:5px;"></div>
       </div>
