Remove redundant and misleading count from panel title on all reviews view

--- a/views/app_all_list.erb
+++ b/views/app_all_list.erb
@@ -17,7 +17,7 @@
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">
-          <i class="fa fa-globe"></i> All Reviews  (<%=@reviews.size%>)
+          <i class="fa fa-globe"></i> All Reviews  
           <span style="position:absolute;right:25px;">
             <% if !@last.nil? %>
               <a href="?os=<%=@last%>" style="color:#FFF;"><i class="fa fa-chevron-left"></i></a>
