--- a/views/admin_user_single.erb
+++ b/views/admin_user_single.erb
@@ -273,6 +273,40 @@
         </div>
       </div>
 
+      <hr />
+      <h4 style="margin-top:-20px; margin-left:40px; margin-bottom:20px; color:#999;">Login History <small style="font-size:6pt;"></small></h4>
+      <div class="panel panel-default" style="width:90%; margin-left:5%;">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <i class="fa fa-history"></i> Last 10 Logins 
+            <a href="/admin/users/<%=@user.id%>/loginhistory"><button type="button" class="btn btn-sm btn-info" style="margin-left:12px;">View full list</button></a>
+          </h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped" style="margin-bottom:0px;">
+            <tr>
+              <td style="width:20%"><b>Date/Time</b></td>
+              <td style="width:10%"><b>Type</b></td>
+              <td style="width:10%"><b>Source IP</b></td>
+              <td style="width:10%"><b>Result</b></td>
+              <td style="width:50%"><b>User Agent</b></td>
+            </tr>
+
+            <% @logins.each do |ar| %>
+              <% blob = ar.blobObj %>
+              <tr>
+                <td style="width:20%"><%=ar.event_at.strftime('%-d %b %Y - %H:%M')%></td>
+                <td style="width:10%"><% if blob[:type] == 'sso' %>SSO <% else %> Direct <% end %></td>
+                <td style="width:10%"><%=blob[:ip]%></td>
+                <td style="width:10%"><% if ar.event_type == EVENT_TYPE::USER_LOGIN %>Success<% elsif blob[:error] == "inactive" %>Inactive<% else %>Failed<% end %></td>
+                <td style="width:50%"><%=blob[:ua]%></td>
+              </tr>
+            <% end %>
+          </table>
+        </div>
+      </div>
+      
+
       <div class="form-group">
         <div class="col-sm-3"></div>
         <div class="col-sm-2" style="text-align:center;">
