Add functions for import/export Vulntypes via XML

--- a/views/admin_vts.erb
+++ b/views/admin_vts.erb
@@ -18,7 +18,9 @@
       <div class="panel-heading">
         <span style="font-size:12pt;"><i class="fa fa-wrench"></i> VulnTypes</span>
         <span style="position:absolute;right:25px;">
-          <a href="/admin/vulntypes/new" style="color:#FFF;"><i class="fa fa-plus"></i> New VulnType</a>
+          <a href="/admin/vulntypes/new" style="color:#FFF;"><i class="fa fa-plus"></i> New Vulntype</a>
+          <a href="/admin/vulntypes/export"><button type="button" class="btn btn-xs btn-info" style="margin-left:6px;">Export Vulntypes</button></a>
+          <a href="/admin/vulntypes/import"><button type="button" class="btn btn-xs btn-info" style="margin-left:6px;">Import Vulntypes</button></a>
         </span>
       </div>
       <div class="panel-body">
