Fix a couple of typos

--- a/exportTemplates/default.erb
+++ b/exportTemplates/default.erb
@@ -247,7 +247,7 @@
 
 				<p>The attack vector and evidence of vulnerability associated with each item is listed with a description of the vulnerability. Suggested remediation steps and additional educational resources for each class of vulnerability are also provided.</p>
 
-				<p class="strongP">Please note that this is not a comprehensive list of vulnerabilities in your application. Similiar and additional vulnerabilites outside of this report may exist. Please look through your entire codebase for additional security issues.</p>
+				<p class="strongP">Please note that this is not a comprehensive list of vulnerabilities in your application. Similar and additional vulnerabilities outside of this report may exist. Please look through your entire codebase for additional security issues.</p>
 			</div>
 
 			<hr>
