Propose fix to fa-dashboard

--- a/views/admin_dc_new.erb
+++ b/views/admin_dc_new.erb
@@ -6,7 +6,7 @@
     <ol class="breadcrumb">
       <li><a href="/admin/settings"><i class="fa fa-cog"></i> Vulnreport Settings</a></li>
       <li><a href="/admin/dashConfigs"><i class="fa fa-print"></i> Dashboard Configs</a></li>
-      <li class="active"><i class="fa fa-dashbaord"></i> New Dashboard Config</li>
+      <li class="active"><i class="fa fa-dashboard"></i> New Dashboard Config</li>
     </ol>
   </div>
 </div><!-- /.row -->
